# the_game

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
resources/maps/: adventurer_tilesheet.tsx  lvl_0.tmx  spritesheet-backgrounds-default.tsx  spritesheet-tiles-default.tsx
src/: Config.hpp  action.h  actor.h  animation2d.cpp  animation2d.h  asset_manager.h  canJump.cpp  canJump.h  config.hpp  enemy.h  gamelevel.cpp  gamelevel.h  gamelogic.cpp  gamelogic.h  input_manager.cpp  input_manager.h  jump.cpp  jump.h  jumpable.cpp  jumpable.h  keyboard_listener.h  main.cpp  movable.cpp  movable.h  move.cpp  move.h  patrolable.cpp  patrolable.h  player.cpp  player.h  types.h
src/Actions/: action.h  jump.cpp  jump.h  move.cpp  move.h
src/Actors/: actor.h  enemy.cpp  enemy.h  player.cpp  player.h
src/Actors/Abilities/Movement/: jumpable.cpp  jumpable.h  movable.cpp  movable.h  patrolable.cpp  patrolable.h
src/Helpers/: animation2d.cpp  animation2d.h  animation2d_blinker.cpp  animation2d_blinker.h  asset_manager.h  ianimation2d.h  texture_manager.cpp  texture_manager.h
src/Input/: input_manager.cpp  input_manager.h  keyboard_listener.h
src/Logic/: collision_listener.h  collision_system.cpp  collision_system.h  gamelevel.cpp  gamelevel.h  gamelogic.cpp  gamelogic.h
